changelog: 1.0 first project 1.1 change design add drag and drop fix bug in chrome fix status bugs 1.2 disabled upload button when upload in progress 1.3 simplify codes 1.4 Change failed folder simplify codes

--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -12,7 +12,7 @@
    <description>Location to store failed file</description> 
    <param-name>failed</param-name> 
    <param-value>
-      b:\
+      b:\Failed\
    </param-value> 
 </context-param>
 
